@@ -1,3 +1,8 @@
+2007-05-04  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-desktop.c: (desktop_init):
+	* appearance.glade: fix string capitalization according to HIG
+
 2007-05-04  Denis Washington  <denisw@svn.gnome.org>
 
 	* appearance.glade: Change tab order; Desktop now comes before Fonts.
